--- a/FirstStrykedapp/package.json
+++ b/FirstStrykedapp/package.json
@@ -39,5 +39,14 @@
     "semantic-ui-css": "^2.4.1",
     "web3": "^1.2.7"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "web3": "^1.2.7"
+  }
 }
