--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,7 +2,6 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
 name: Node.js CI
-workdir: FirstStrykedapp
 
 on:
   push:
@@ -26,8 +25,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: npm ci --prefix FirstStrkedapp
+    - run: npm run build --if-present --prefix FirstStrkedapp
+    - run: npm test --prefix FirstStrkedapp
       env:
         CI: true
