--- a/FirstStrykedapp/package.json
+++ b/FirstStrykedapp/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "google-map-react": "^1.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
@@ -38,12 +39,10 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "web3": "^1.2.7",
-    "leaflet": "^1.6.0",
-    "react-leaflet": "^1.6.0",
-    "react-leaflet-heatmap-layer": "^2.0.0"
+    "web3": "^1.2.7"
   },
   "devDependencies": {
+    "google-map-react": "^1.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
@@ -51,9 +50,6 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "web3": "^1.2.7",
-    "leaflet": "^1.6.0",
-    "react-leaflet": "^1.6.0",
-    "react-leaflet-heatmap-layer": "^2.0.0"
+    "web3": "^1.2.7"
   }
 }
