--- a/FirstStrykedapp/package.json
+++ b/FirstStrykedapp/package.json
@@ -31,29 +31,37 @@
     ]
   },
   "dependencies": {
+    "google-maps-react": "^2.0.6",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-leaflet": "^1.6.0",
+    "react-leaflet-heatmap-layer": "^2.0.0",
+    "react-router": "^5.1.2",
     "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "web3": "^1.2.7",
-    "leaflet": "^1.6.0",
-    "react-leaflet": "^1.6.0",
-    "react-leaflet-heatmap-layer": "^2.0.0"
+    "web3": "^1.2.7"
   },
   "devDependencies": {
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^1.6.0",
+    "react-leaflet-heatmap-layer": "^2.0.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "web3": "^1.2.7",
-    "leaflet": "^1.6.0",
-    "react-leaflet": "^1.6.0",
-    "react-leaflet-heatmap-layer": "^2.0.0"
+    "semantic-ui-react": "^0.88.2",
+    "web3": "^1.2.7"
   }
 }
