--- a/FirstStrykedapp/package.json
+++ b/FirstStrykedapp/package.json
@@ -50,6 +50,7 @@
     "google-map-react": "^1.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
