--- a/FirstStrykedapp/package.json
+++ b/FirstStrykedapp/package.json
@@ -41,6 +41,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "truffle": "^5.1.24",
+    "@truffle/hdwallet-provider": "^1.0.34",
     "semantic-ui-css": "^2.4.1",
     "web3": "^1.2.7"
   },
@@ -57,6 +59,8 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
+    "truffle": "^5.1.24",
+    "@truffle/hdwallet-provider": "^1.0.34",
     "web3": "^1.2.7"
   }
 }
